--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist-ssr
 coverage
 *.local
 
+# Playwright
+playwright-report/
+test-results/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
