feat: MDXレッスン対応と自動生成パイプライン
## 主な変更
- MDXによるレッスンコンテンツ管理
- 週次レッスン自動生成GitHub Actions
- レッスン検証/統計コマンド
- 学習パス(Roadmap)ページ追加
- 前提レッスン/次に読むべきレッスン表示
- 学習可能/未解放ステータス表示
- Pre-commit Hook (lint-staged + husky)
- PRテンプレート追加
- ブランチ保護設定ガイド

## 新規ファイル
- src/content/lessons/*.mdx (6本)
- src/lib/lessons/ (ローダー/ソート)
- src/pages/RoadmapPage.tsx
- tools/generate-lessons.mjs
- tools/validate-lessons.mjs
- tools/lessons-stats.mjs
- lessons.backlog.json (18本)
- .github/workflows/lesson-scheduler.yml
- .github/PULL_REQUEST_TEMPLATE.md
- docs/BRANCH_PROTECTION.md

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Type check
         run: npm run typecheck
 
+      - name: Validate lessons
+        run: npm run validate:lessons -- --strict
+
       - name: Test with coverage
         run: npm run test:coverage
 
