fix(e2e): E2EをSupabase env非依存のモックモードで実行
- VITE_E2E=true でisMockModeを強制有効化
- package.jsonにe2e:mock/e2e:ui:mockスクリプト追加
- CIをe2e:mockに変更（環境変数に依存しない安定実行）
- READMEにSupabase実接続の手動Smoke手順追記

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
 
-      - name: Run E2E tests
-        run: npm run e2e
+      - name: Run E2E tests (mock mode)
+        run: npm run e2e:mock
