--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:coverage": "vitest run --coverage",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "e2e": "playwright test",
+    "e2e:mock": "VITE_E2E=true playwright test",
     "e2e:ui": "playwright test --ui",
+    "e2e:ui:mock": "VITE_E2E=true playwright test --ui",
     "generate:lessons": "node tools/generate-lessons.mjs",
     "validate:lessons": "node tools/validate-lessons.mjs",
     "lessons:stats": "node tools/lessons-stats.mjs",
