--- a/.github/workflows/lesson-scheduler.yml
+++ b/.github/workflows/lesson-scheduler.yml
@@ -11,6 +11,11 @@ on:
         required: false
         default: '3'
         type: string
+      selected_slugs:
+        description: 'Comma-separated slugs to generate (optional, overrides auto-selection)'
+        required: false
+        default: ''
+        type: string
 
 permissions:
   contents: write
@@ -56,7 +61,12 @@ jobs:
       - name: Generate lesson scaffolds
         run: |
           max_lessons="${{ github.event.inputs.max_lessons || '3' }}"
-          node tools/generate-lessons.mjs --max="$max_lessons"
+          selected_slugs="${{ github.event.inputs.selected_slugs || '' }}"
+          if [ -n "$selected_slugs" ]; then
+            node tools/generate-lessons.mjs --max="$max_lessons" --slugs="$selected_slugs"
+          else
+            node tools/generate-lessons.mjs --max="$max_lessons"
+          fi
 
       - name: Check for changes
         id: changes
