feat(P5-2.3): Lifecycle Runner - 定期実行・冪等化・可視化
- lifecycle_applied イベントタイプを追加
- lifecycleIdempotencyService（冪等性判定ロジック）
- tools/run-lifecycle.mjs（CLIツール）
- improvement-lifecycle.yml（GitHub Actions workflow）
- LifecycleStatsCard（Admin Metrics UI）
- 11 unit tests for idempotency service

spec-lock:
- reference_id format: issue:{issueNumber}:{decision}
- 同一 issue + decision は 2回目以降スキップ

Unit: 863 passed | E2E: 119 passed

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "generate:lessons": "node tools/generate-lessons.mjs",
     "validate:lessons": "node tools/validate-lessons.mjs",
     "lessons:stats": "node tools/lessons-stats.mjs",
+    "lifecycle:run": "node tools/run-lifecycle.mjs",
+    "lifecycle:dry": "node tools/run-lifecycle.mjs --dry-run",
     "prepare": "husky"
   },
   "dependencies": {
