feat(lessons): 30レッスン教材完成 - 設計判断レベルへ
## 追加レッスン（24本）
- Beginner: props-basics, event-handling, conditional-rendering, lists-and-keys, lifting-state-up, component-composition, children-props, styling-in-react, debugging-react, react-strict-mode
- Intermediate: useRef-hook, useCallback-useMemo, custom-hooks, context-patterns, form-validation, data-fetching, loading-error-states, react-router-basics, router-advanced, error-boundaries
- Advanced: react-performance, typescript-with-react, testing-basics, state-management-patterns

## 各レッスンの構成
- Objectives（判断可能な学習目標）
- やっていいこと/ダメなこと
- 動作するサンプルコード
- Pitfalls（なぜ起きる/どう防ぐ）
- 練習問題（易→普→応用）

## Advanced専用
- Design Decisions（なぜ/他の選択肢/破綻条件）
- レビュー型練習問題

## その他
- E2Eテスト安定化（gotoByLinkパターン）
- lessons.backlog.json更新（30件）

--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "e2e": "playwright test",
-    "e2e:mock": "VITE_E2E=true playwright test",
-    "e2e:ui": "playwright test --ui",
-    "e2e:ui:mock": "VITE_E2E=true playwright test --ui",
+    "e2e": "VITE_E2E=true playwright test",
+    "e2e:ui": "VITE_E2E=true playwright test --ui",
     "generate:lessons": "node tools/generate-lessons.mjs",
     "validate:lessons": "node tools/validate-lessons.mjs",
     "lessons:stats": "node tools/lessons-stats.mjs",
