--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:coverage": "vitest run --coverage",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "e2e": "VITE_E2E=true playwright test",
+    "e2e:mock": "VITE_E2E=true playwright test",
     "e2e:ui": "VITE_E2E=true playwright test --ui",
     "generate:lessons": "node tools/generate-lessons.mjs",
     "validate:lessons": "node tools/validate-lessons.mjs",
