perf(bundle): enable proper MDX lesson code splitting
- Extract frontmatter metadata to JSON file at build time
- Remove dual glob import that caused Vite to bundle all MDX statically
- Add prebuild script to generate metadata.json
- Enable resolveJsonModule in tsconfig

Before: loader.js = 404KB (all 30 lessons bundled)
After: loader.js = 17KB + individual lesson chunks (2-26KB each)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "dev": "vite",
+    "prebuild": "node tools/extract-lesson-metadata.mjs",
     "build": "tsc -b && vite build",
+    "extract:lessons": "node tools/extract-lesson-metadata.mjs",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "preview": "vite preview",
