--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mdx-js/react": "^3.1.1",
     "@supabase/supabase-js": "^2.90.1",
     "lucide-react": "^0.562.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
