fix(ci): remove coverage and use threads pool
カバレッジ生成によるメモリ不足を回避

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Validate lessons
         run: npm run validate:lessons -- --strict
 
-      - name: Test with coverage
-        run: npx vitest run --coverage --pool=threads --poolOptions.threads.maxThreads=2
+      - name: Test
+        run: npx vitest run --pool=threads
 
       - name: Build
         run: npm run build
